# cloakbrowser-suite

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
backend/: browser_manager.py  config.py  database.py  main.py  models.py
cli/: main.py
compat/: __init__.py
docs/: chromium-path-config-design.md
docs/superpowers/plans/: 2025-06-13-chromium-path-config.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  novnc.d.ts
frontend/src/components/: LaunchButton.tsx  LoginPage.tsx  ProfileForm.tsx  ProfileList.tsx  ProfileViewer.tsx  Settings.tsx  StatusIndicator.tsx
frontend/src/hooks/: useProfiles.test.ts  useProfiles.ts
frontend/src/lib/: api.test.ts  api.ts
frontend/src/styles/: globals.css
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
